--- a/DentalClinicReservationAndManagementSystem/DentalClinicReservationAndManagementSystem.csproj
+++ b/DentalClinicReservationAndManagementSystem/DentalClinicReservationAndManagementSystem.csproj
@@ -154,6 +154,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Dental.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DentalNew.cs">
+      <DependentUpon>Dental.tt</DependentUpon>
+    </Compile>
     <Compile Include="Dentist.cs">
       <DependentUpon>Dental.tt</DependentUpon>
     </Compile>
