--- a/DentalClinicReservationAndManagementSystem/DentalClinicReservationAndManagementSystem.csproj
+++ b/DentalClinicReservationAndManagementSystem/DentalClinicReservationAndManagementSystem.csproj
@@ -696,6 +696,7 @@
     <Content Include="Views\Home\SeeAppointments.cshtml" />
     <Content Include="Views\Home\CreatePrescription.cshtml" />
     <Content Include="Views\Home\_AppointmentsList.cshtml" />
+    <Content Include="Views\Home\Dashboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
