--- a/DentalClinicReservationAndManagementSystem/Web.config
+++ b/DentalClinicReservationAndManagementSystem/Web.config
@@ -23,6 +23,7 @@
       </system.Web>
   -->
   <system.web>
+	  <sessionState mode="InProc" cookieless="UseCookies" timeout="20" />
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
